--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "seisman.info",
+  "version": "2.0.0",
   "private": true,
   "hexo": {
     "version": "3.2.0"
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-all-minifier": "0.0.13",
+    "hexo-deployer-git": "^0.1.0",
+    "hexo-filter-auto-spacing": "^0.2.1",
+    "hexo-filter-fix-cjk-spacing": "^0.0.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.1.0",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-search": "^1.0.2",
+    "hexo-generator-seo-friendly-sitemap": "0.0.15",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-pandoc": "^0.1.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-renderer-marked": "^0.2.10",
     "hexo-server": "^0.2.0"
   }
 }
