ignore README.md in source directory

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - "README.md"
 
 # Writing
 new_post_name: :year-:month-:day-:title.md # File name of new posts
