make submodule track specific branch
1. themes/next: tracking seisman branch
2. source: track dev branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "themes/next"]
-	path = themes/next
-	url = https://github.com/seisman/hexo-theme-next.git
+    path = themes/next
+    url = https://github.com/seisman/hexo-theme-next.git
+    branch = seisman
 [submodule "source"]
-	path = source
-	url = https://github.com/seisman/seisman.info.posts.git
+    path = source
+    url = https://github.com/seisman/seisman.info.posts.git
+    branch = dev
