follow master branch of posts
posts仓库引入dev分支，使得管理与使用变得很麻烦，因而删除dev分支，
只保留master分支。

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 [submodule "source"]
     path = source
     url = https://github.com/seisman/seisman.info.posts.git
-    branch = dev
+    branch = master
