--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-pandoc": "^0.1.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "pandoc-filter": "^0.1.4"
   }
 }
