--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://seisman.info
+url: http://seisman.info
 root: /
 permalink: :title.html
 permalink_defaults:
