--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
 
 [params]
   version = "3.x"           # Used to give a friendly message when you have an incompatible update
-  debug = false             # If true, load `eruda.min.js`. See https://github.com/liriliri/eruda
+  debug = true             # If true, load `eruda.min.js`. See https://github.com/liriliri/eruda
 
   since = "2013"            # Site creation time          # 站点建立时间
 
@@ -55,7 +55,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   description = "地球物理学小众博客。"
 
   # paginate of archives, tags and categories             # 归档、标签、分类每页显示的文章数目，建议修改为一个较大的值
-  archive-paginate = 20
+  archivePaginate = 20
 
   # The date format to use; for a list of valid formats, see https://gohugo.io/functions/format/
   dateFormatToUse = "2006-01-02"
