--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ googleAnalytics = ""      # UA-XXXXXXXX-X
 copyright = ""            # default: author.name ↓        # 默认为下面配置的author.name ↓
 
 disablePathToLower = true
+ignoreFiles = ["README.md"]
 
 [blackfriday]
   fractions = false
